  - Bochs disassembler fixes / new instructions support.
  - Fixed timer breakpoint handling in Bochs internal debugger.
  - Fixed bug in Bochs internal debugger 'show off' command.
  - Added Bochs internal debugger command 'vmexitbp' to set breakpoint on
    VMX guest VMEXIT (patch by Jianan Hao). Type 'vmexitbp' in debugger
    command window to switch it on/off (similar to modebp).
  - Fixed bug in GUI debugger SSE registers display.
  - Correctly display current CPU mode in GUI debugger status bar.
  - Turn off the mouse capture when the internal debugger or gdbstub enter
    the input loop.

- Memory
  - Added new configure option which enables RAM file backing for large guest
    memory with a smaller amount host memory, without causing a panic when
    host memory is exhausted (patch by Gary Cameron). To enable configure with
        --enable-large-ramfile option.

- Configure and compile
  - Fixed Bochs manifest for Win64 compilation using Microsoft Visual Studio
    command line compiler.
  - Added ability to configure CPUID family through .bochsrc.
    The default family value determined by configure option --enable-cpu-level.
  - Added ability to configure CPUID model through .bochsrc.
    The default model value is 3.
  - Added ability to configure x2apic support through .bochsrc.
    The APIC configuration could be selected using new CPUID .bochsrc APIC option.
    Possible configurations are: "legacy", "xapic" and "x2apic".
    Configure option --enable-x2apic and Bochs 2.4.6 .bochsrc XAPIC option are
    deprecated and should not be used anymore.
  - Configure option --enable-vbe is deprecated and should not be used anymore.
    The VBE support is always automatically compiled in, in order to enable
    VBE support the .bochsrc option "vga: extension=" has to be set to "vbe".
    If PCI is present, the "pcivga" device can be assigned to PCI slot.
  - Configure option --enable-acpi is deprecated and should not be used anymore.